# blazescript

./: .clang-format  .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  blaze-darwin-latest  blaze-linux-latest  blaze-macos-latest  blaze-ubuntu-latest  blaze-windows  blaze-windows-latest  blazeas  blazec  build.sh  confdefs.h  config.h.in  configure  configure.ac  conftest.c  main.blas  test.txt  version.json
.github/: windows-autoreconf.sh  windows-build.sh
.github/workflows/: build.yml  codecov.yml  codeql.yml  cross-compile.yml  release.yml
img/: blazescript-blaze-src.xml
include/: Makefile.am  alloca.h  http.h  lib.h  log.h  print.h  utils.h
lib/: Makefile.am  http.c  lib.c  log.c  print.c  utils.c  value.c
lib/common/: common.h  stdio.c  stdio.h
lib/i386/: stdio.h  stdio_linux.s  stdlib.h  stdlib_linux.s
lib/x86_64/: stdio.h  stdio_darwin.s  stdio_linux.s  stdio_windows.s  stdlib.h  stdlib_darwin.s  stdlib_linux.s  stdlib_windows.s
src/: Makefile  Makefile.am  Makefile.in  alloca.c  alloca.h  arch.c  arch.h  array.c  array.h  asm.c  asm.h  assemble.c  assemble.h  ast.h  blaze.c  blaze.h  blazeas.c  blazec.c  blazec.h  blazevm.c  bstring.c  bytecode.c  bytecode.h  compile-x86_64.c  compile-x86_64.h  compile.c  compile.h  config.h  datatype.c  datatype.h  debug.c  debug.h  disassemble.c  disassemble.h  errmsg.c  errmsg.h  eval.c  eval.h  file.c  file.h  (+39 more)
tests/: Makefile  if-statements.sh  println.sh  setup.sh
